# safehold

./: .gitignore  Cargo.toml  README.md  flake.nix  garnix.yaml  servers.nix
.github/workflows/: build-and-cache-provider.yml  test.yaml
crates/include_dna_def/: Cargo.toml
crates/include_dna_def/src/: lib.rs
crates/locker_service_client/: Cargo.toml  default.nix
crates/locker_service_client/src/: lib.rs  main.rs  setup.rs
crates/locker_service_client/tests/: common.rs  store_and_get_messages.rs
crates/locker_service_provider/: Cargo.toml  default.nix
crates/locker_service_provider/src/: lib.rs  locker_clones.rs  main.rs  setup.rs
crates/locker_service_provider/tests/: common.rs  store_and_get_messages.rs
crates/locker_service_trait/: Cargo.toml
crates/locker_service_trait/src/: lib.rs
crates/locker_types/: Cargo.toml
crates/locker_types/src/: lib.rs
crates/safehold_service_client/: Cargo.toml  default.nix
crates/safehold_service_client/src/: lib.rs  main.rs  setup.rs  utils.rs
crates/safehold_service_provider/: Cargo.toml  default.nix
crates/safehold_service_provider/src/: lib.rs  locker_clones.rs  main.rs  safehold_clones.rs  setup.rs
crates/safehold_service_provider/tests/: common.rs  store_and_get_messages.rs
crates/safehold_service_trait/: Cargo.toml
crates/safehold_service_trait/src/: lib.rs
crates/safehold_types/: Cargo.toml
crates/safehold_types/src/: lib.rs
dnas/example/: dna.nix
dnas/example/workdir/: dna.yaml
dnas/example/zomes/coordinator/encrypted_channels/: Cargo.toml  zome.nix
dnas/example/zomes/coordinator/encrypted_channels/src/: channels.rs  handshake.rs  lib.rs  send_messages.rs  utils.rs
dnas/example/zomes/coordinator/encrypted_messages/: Cargo.toml  zome.nix
dnas/example/zomes/coordinator/encrypted_messages/src/: chunks.rs  lib.rs  peer_keys.rs  utils.rs
dnas/example/zomes/integrity/encrypted_channels/: Cargo.toml
dnas/example/zomes/integrity/encrypted_channels/src/: lib.rs
dnas/example/zomes/integrity/encrypted_messages/: Cargo.toml  zome.nix
dnas/example/zomes/integrity/encrypted_messages/src/: chunk.rs  lib.rs  message.rs  peer_keys.rs
dnas/locker_service/: dna.nix
dnas/locker_service/workdir/: dna.yaml
dnas/locker_service/zomes/coordinator/locker/: Cargo.toml
dnas/locker_service/zomes/coordinator/locker/src/: lib.rs  message.rs  migration.rs  utils.rs
dnas/locker_service/zomes/integrity/locker/: Cargo.toml  zome.nix
dnas/locker_service/zomes/integrity/locker/src/: lib.rs  message.rs
dnas/manager/: dna.nix
dnas/manager/workdir/: dna.yaml
dnas/proxy/: dna.nix
dnas/proxy/workdir/: dna.yaml
dnas/proxy/zomes/coordinator/proxy/: Cargo.toml  zome.nix
dnas/proxy/zomes/coordinator/proxy/src/: lib.rs  proxied_role.rs  utils.rs
dnas/proxy/zomes/integrity/proxy/: Cargo.toml  zome.nix
dnas/proxy/zomes/integrity/proxy/src/: lib.rs  proxied_role.rs
dnas/safehold_service/: dna.nix
dnas/safehold_service/workdir/: dna.yaml
dnas/safehold_service/zomes/coordinator/safehold/: Cargo.toml  zome.nix
dnas/safehold_service/zomes/coordinator/safehold/src/: lib.rs  message.rs  migration.rs  utils.rs
dnas/safehold_service/zomes/integrity/safehold/: Cargo.toml  zome.nix
dnas/safehold_service/zomes/integrity/safehold/src/: message.rs
dnas/service_providers/: dna.nix
dnas/service_providers/zomes/coordinator/locker_gateway/: Cargo.toml  zome.nix
dnas/service_providers/zomes/coordinator/locker_gateway/src/: lib.rs  locker_service.rs
dnas/services/: dna.nix
dnas/services/zomes/coordinator/safehold_gateway/: Cargo.toml  zome.nix
dnas/services/zomes/coordinator/safehold_gateway/src/: lib.rs
workdir/: happ.nix  happ.yaml
