
[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*", "crates/*"]
resolver = "2"

[workspace.dependencies]
hdi = "0.6.3"
hdk = "0.5.3"
serde = "1.0"
holochain_serialized_bytes = "*"

[workspace.dependencies.locker]
path = "dnas/locker_service/zomes/coordinator/locker"

[workspace.dependencies.locker_integrity]
path = "dnas/locker_service/zomes/integrity/locker"

[workspace.dependencies.proxy]
path = "dnas/proxy/zomes/coordinator/proxy"

[workspace.dependencies.proxy_integrity]
path = "dnas/proxy/zomes/integrity/proxy"

[patch.crates-io]
kitsune2 = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_api = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_core = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_dht = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_gossip = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
kitsune2_bootstrap_client = { git = "https://github.com/guillemcordoba/kitsune2", branch = "iroh-transport" }
