[package]
name = "safehold_service_trait"
version.workspace = true
edition = "2021"

[dependencies]
hc_zome_traits = { git = "https://github.com/holochain-open-dev/zome-traits", branch = "main" }

hdk = { workspace = true }
holochain_serialized_bytes = "*"
serde = "1"

safehold_types = { path = "../safehold_types" }
