[package]
name = "encrypted_channels"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "encrypted_channels"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
encrypted_channels_integrity = { path = "../../integrity/encrypted_channels" }

locker_types = { path = "../../../../../crates/locker_types" }
locker_service_trait = { path = "../../../../../crates/locker_service_trait" }
