[package]
name = "encrypted_messages"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "encrypted_messages"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
encrypted_messages_integrity = { path = "../../integrity/encrypted_messages" }

safehold_types = { path = "../../../../../crates/safehold_types" }
safehold_service_trait = { path = "../../../../../crates/safehold_service_trait" }
