[package]
name = "locker"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "locker"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
locker_integrity = { workspace = true }

locker_types = { path = "../../../../../crates/locker_types" }
locker_service_trait = { path = "../../../../../crates/locker_service_trait" }
