[package]
name = "proxy"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "proxy"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
proxy_integrity = { workspace = true }

safehold_types = { path = "../../../../../crates/safehold_types" }
