[package]
name = "proxy"
version = "0.501.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "proxy"

[dependencies]
hdk = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }
proxy_integrity = { workspace = true }

safehold_types = { path = "../../../../../crates/safehold_types" }
