[package]
name = "safehold_integrity"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "safehold_integrity"

[dependencies]
hdi = { workspace = true }
holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

safehold_types = { path = "../../../../../crates/safehold_types" }
