[package]
name = "safehold_gateway"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "safehold_gateway"

[dependencies]
hdk = { workspace = true }

holochain_serialized_bytes = { workspace = true }
serde = { workspace = true }

hc_zome_traits = { git = "https://github.com/holochain-open-dev/zome-traits", branch = "main" }

safehold_service_trait = { path = "../../../../../crates/safehold_service_trait" }
safehold_types = { path = "../../../../../crates/safehold_types" }
